gitops/apps/workloads/web-app/overlays/cloud/stg/http-route-preview.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-app-preview
spec:
  parentRefs:
    - name: portfolio-edge-gateway
      namespace: edge-system
      sectionName: https
  hostnames:
    - placeholder.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-app-preview
          port: 80
